# Options-plan-

./: .env.example  .gitignore  CLAUDE.md  EXECUTIVE_BUILD_REPORT.md  PROJECT_BRIEF.md  README.md  pyproject.toml
checkpoints/: checkpoint_0_data_ready.md  checkpoint_1.md  checkpoint_2.md  checkpoint_3.md  checkpoint_4.md  checkpoint_5.md
configs/: gate_sets.yaml
configs/legacy/: aryan-optimized.yaml
configs/proposals/: qqq-ic-extension.yaml  spy-bear-call-post-spike-fade.yaml  spy-bull-put-elevated-vol.yaml  spy-ic-regime-recovery.yaml  spy-iron-fly-low-vvix.yaml  spy-tight-ic-aggressive.yaml
data/results/: .phase_1_status.json  .phase_2_status.json  .phase_3_status.json  .phase_4_status.json
deliverables/: OA_BUILD_WORKSHEETS.md  build_order.md  portfolio_kill_switches.md  regime_monitor.md  suite_summary.md  validation_summary.md
deliverables/oa_claw_tasks/: 00_global_setup.txt  01_system_host_bot.txt  02_sensor_a_regime.txt  03_sensor_b_recovery.txt  04_sensor_c_blackout.txt  05_sensor_d_earnings.txt  10_bot1_iron_fly.txt  11_bot2_bear_call.txt  12_bot3_legacy_ic.txt  13_bot4_tight_ic.txt  14_bot5_bull_put.txt  15_bot6_regime_recovery.txt  16_bot7_qqq_ic.txt  DEPLOYMENT_RUNBOOK.md  README.md
proposals/: 2026-04-19-qqq-ic-extension.md  2026-04-19-spy-bear-call-post-spike-fade.md  2026-04-19-spy-bull-put-elevated-vol.md  2026-04-19-spy-ic-regime-recovery.md  2026-04-19-spy-iron-fly-low-vvix.md  2026-04-19-spy-tight-ic-aggressive.md
scripts/: pull_fred.py  pull_polygon.py  run_phase1.py  run_phase2.py  run_phase3.py  run_phase4.py  run_phase5.py
src/delta_optimizer/: __init__.py
tests/: conftest.py
tests/unit/: test_bsm.py  test_cache.py  test_cpcv.py  test_dsr.py  test_iron_condor.py  test_oa_compat.py  test_pbo.py  (+5 more)
(+66 files in other folders)
